--- a/.gitignore
+++ b/.gitignore
@@ -32,13 +32,10 @@ proguard/
 # Android Studio captures folder
 captures/
 
-# Intellij
+# User-specific configurations
+.idea/
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/dictionaries
-.idea/libraries
+
 
 # Keystore files
 *.jks
